deploy.yaml
## /////////////////////////////////////// BEGIN Jaeger
# I generated it using
# curl https://raw.githubusercontent.com/jaegertracing/jaeger-operator/master/examples/simplest.yaml | docker run -i --rm jaegertracing/jaeger-operator:master generate | kubectl apply -n jaeger -f -
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "false"
    service.beta.openshift.io/serving-cert-secret-name: simplest-collector-headless-tls
  labels:
    app: jaeger
  name: simplest-collector-headless
  namespace: jaeger
spec:
  clusterIP: None
  ports:
  - name: http-zipkin
    port: 9411
  - name: grpc-http
    port: 14250
  - name: c-tchan-trft
    port: 14267
  - name: http-c-binary-trft
    port: 14268
  selector:
    app: jaeger
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: simplest-collector
  namespace: jaeger
spec:
  ports:
  - name: http-zipkin
    port: 9411
  - name: grpc-http
    port: 14250
  - name: c-tchan-trft
    port: 14267
  - name: http-c-binary-trft
    port: 14268
  selector:
    app: jaeger
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: simplest-query
  namespace: jaeger
spec:
  type: NodePort
  ports:
  - name: http-query
    port: 16686
    targetPort: 16686
  selector:
    app: jaeger
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: jaeger
spec:
  rules:
    - host: jaeger.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simplest-query
                port:
                  number: 16686

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: simplest-agent
  namespace: jaeger
spec:
  clusterIP: None
  ports:
  - name: zk-compact-trft
    port: 5775
    protocol: UDP
  - name: config-rest
    port: 5778
  - name: jg-compact-trft
    port: 6831
    protocol: UDP
  - name: jg-binary-trft
    port: 6832
    protocol: UDP
  selector:
    app: jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    linkerd.io/inject: disabled
    prometheus.io/port: "14269"
    prometheus.io/scrape: "true"
    sidecar.istio.io/inject: "false"
  labels:
    app: jaeger
  name: simplest
  namespace: jaeger
spec:
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      annotations:
        linkerd.io/inject: disabled
        prometheus.io/port: "14269"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "false"
      labels:
        app: jaeger
    spec:
      containers:
      - args:
        - --sampling.strategies-file=/etc/jaeger/sampling/sampling.json
        image: jaegertracing/all-in-one:1.22.0
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 14269
          initialDelaySeconds: 5
          periodSeconds: 15
        name: jaeger
        ports:
        - containerPort: 5775
          name: zk-compact-trft
          protocol: UDP
        - containerPort: 5778
          name: config-rest
        - containerPort: 6831
          name: jg-compact-trft
          protocol: UDP
        - containerPort: 6832
          name: jg-binary-trft
          protocol: UDP
        - containerPort: 9411
          name: zipkin
        - containerPort: 14267
          name: c-tchan-trft
        - containerPort: 14268
          name: c-binary-trft
        - containerPort: 16686
          name: query
        - containerPort: 14269
          name: admin-http
        - containerPort: 14250
          name: grpc
        readinessProbe:
          httpGet:
            path: /
            port: 14269
          initialDelaySeconds: 1
        volumeMounts:
        - mountPath: /etc/jaeger/sampling
          name: simplest-sampling-configuration-volume
          readOnly: true
      enableServiceLinks: false
      serviceAccountName: simplest
      volumes:
      - configMap:
          items:
          - key: sampling
            path: sampling.json
          name: simplest-sampling-configuration
        name: simplest-sampling-configuration-volume
---
## /////////////////////////////////////// BEGIN Zipkin
apiVersion: v1
kind: Namespace
metadata:
  name: zipkin
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: zipkin
  name: zipkin
  namespace: zipkin
spec:
  type: NodePort
  ports:
  - port: 9411
    protocol: TCP
    targetPort: 9411
  selector:
    app: zipkin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-ingress
  namespace: zipkin
spec:
  rules:
    - host: zipkin.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zipkin
  name: zipkin
  namespace: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - image: openzipkin/zipkin:2.23.2
        imagePullPolicy: Always
        name: zipkin
---
## /////////////////////////////////////// BEGIN OTEL collector
apiVersion: v1
kind: Namespace
metadata:
  name: otel
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otel-agent
  namespace: otel
  labels:
    app: opentelemetry
    component: otel-agent
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-agent
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-agent
    spec:
      containers:
      - command:
          - "/otelcontribcol"
          - "--config=/conf/otel-agent-config.yaml"
          # Memory Ballast size should be max 1/3 to 1/2 of memory.
          - "--mem-ballast-size-mib=165"
        image: otel/opentelemetry-collector-contrib:0.27.0
        name: otel-agent
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 55679 # ZPages endpoint.
        - containerPort: 55680 # Default OpenTelemetry receiver port.
        - containerPort: 8888  # Metrics.
        volumeMounts:
        - name: otel-agent-config-vol
          mountPath: /conf
        livenessProbe:
          httpGet:
            path: /
            port: 13133 # Health Check extension default port.
        readinessProbe:
          httpGet:
            path: /
            port: 13133 # Health Check extension default port.
      volumes:
        - configMap:
            name: otel-agent-conf
            items:
              - key: otel-agent-config
                path: otel-agent-config.yaml
          name: otel-agent-config-vol
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: otel
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  type: NodePort
  ports:
  - name: otlp # Default endpoint for OpenTelemetry receiver.
    port: 55680
    protocol: TCP
    targetPort: 55680
  - name: jaeger-grpc # Default endpoint for Jaeger gRPC receiver
    port: 14250
  - name: jaeger-thrift-http # Default endpoint for Jaeger HTTP receiver.
    port: 14268
  - name: zipkin # Default endpoint for Zipkin receiver.
    port: 9411
  - name: metrics # Default endpoint for querying metrics.
    port: 8888
  selector:
    component: otel-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: otel
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-collector
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  replicas: 1 #TODO - adjust this to your own requirements
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-collector
    spec:
      containers:
      - command:
          - "/otelcontribcol"
          - "--config=/conf/otel-collector-config.yaml"
#           Memory Ballast size should be max 1/3 to 1/2 of memory.
          - "--mem-ballast-size-mib=683"
          - "--log-level=DEBUG"
        image: otel/opentelemetry-collector-contrib:0.27.0
        name: otel-collector
        resources:
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 400Mi
        ports:
        - containerPort: 55679 # Default endpoint for ZPages.
        - containerPort: 55680 # Default endpoint for OpenTelemetry receiver.
        - containerPort: 14250 # Default endpoint for Jaeger HTTP receiver.
        - containerPort: 14268 # Default endpoint for Jaeger HTTP receiver.
        - containerPort: 9411 # Default endpoint for Zipkin receiver.
        - containerPort: 8888  # Default endpoint for querying metrics.
        volumeMounts:
        - name: otel-collector-config-vol
          mountPath: /conf
#        - name: otel-collector-secrets
#          mountPath: /secrets
        livenessProbe:
          httpGet:
            path: /
            port: 13133 # Health Check extension default port.
        readinessProbe:
          httpGet:
            path: /
            port: 13133 # Health Check extension default port.
      volumes:
        - configMap:
            name: otel-collector-conf
            items:
              - key: otel-collector-config
                path: otel-collector-config.yaml
          name: otel-collector-config-vol
#        - secret:
#            name: otel-collector-secrets
#            items:
#              - key: cert.pem
#                path: cert.pem
#              - key: key.pem
#                path: key.pem

## /////////////////////////////////////// END OTEL collector

---
## /////////////////////////////////////// BEGIN hello service

apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: NodePort
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: web
    - protocol: TCP
      port: 5678
      targetPort: 5678
      name: debug
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
    - host: hello.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello
                port:
                  number: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: tha2015/helloworld:latest
        name: helloworld3
        imagePullPolicy: Always
        volumeMounts:
          - name: scripts-vol
            mountPath: /scripts
        command: ["/bin/sh", "/scripts/entrypoint.sh"]
      volumes:
        - name: scripts-vol
          configMap:
            name: scripts-config

## /////////////////////////////////////// END hello service

# add to hosts file
#192.168.1.200 zipkin.info
#192.168.1.200 jaeger.info
